[metadata]
name = cathead
author = Tom Cammann
author-email = tom.cammann@hp.com
summary = Certificate monitoring service
description-file =
    README.rst
home-page = None
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    cathead

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[entry_points]
console_scripts =
    cathead = cathead.cathead:main
